--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -8,3 +8,12 @@ header {
     justify-content: space-between;
     align-items: center;
 }
+
+header .logo {
+    width: 175px;
+    height: 100%;
+    background-image: url("../images/logo.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    margin-left: 20px;
+}
