--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -3,10 +3,10 @@ footer {
     height: 60px;
     width: 100%;
     border-top: 1px solid #CCCCCC;
-    position: absolute;
     bottom: 0;
     display: flex;
     align-items: center;
     justify-content: center;
     color: #000000;
+    margin-top: auto;
 }
